Made KisTransaction to save the device offset.

Now be careful with using KisNodeMoveCammand2 together with KisTransaction,
because both of them track the device's offset. Atm, there are no
collisions possible.

BUG:305782